Adding file io for letter matrix

--- a/FOA_Project_3/FOA_Project_3/FOA_Project_3.vcxproj
+++ b/FOA_Project_3/FOA_Project_3/FOA_Project_3.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="d_except.h" />
+    <ClInclude Include="grid.h" />
     <ClInclude Include="word_list.h" />
     <ClInclude Include="heapV.h" />
   </ItemGroup>
