--- a/FOA_Project_3/FOA_Project_3/FOA_Project_3.vcxproj.filters
+++ b/FOA_Project_3/FOA_Project_3/FOA_Project_3.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="word_list.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="grid.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="input15.txt">
