--- a/FOA_Project_3/FOA_Project_3/FOA_Project_3.vcxproj.filters
+++ b/FOA_Project_3/FOA_Project_3/FOA_Project_3.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="heapV.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="d_except.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -25,6 +22,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="grid.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="heap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
