Adding hash table functionality

--- a/FOA_Project_3/FOA_Project_3/FOA_Project_3.vcxproj.filters
+++ b/FOA_Project_3/FOA_Project_3/FOA_Project_3.vcxproj.filters
@@ -27,6 +27,12 @@
     <ClInclude Include="grid.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="hash.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="helpers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="input15.txt">
@@ -58,5 +64,8 @@
     <ClCompile Include="word_search.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
 </Project>
