--- a/FOA_Project_3/FOA_Project_3/FOA_Project_3.vcxproj
+++ b/FOA_Project_3/FOA_Project_3/FOA_Project_3.vcxproj
@@ -21,6 +21,8 @@
   <ItemGroup>
     <ClInclude Include="d_except.h" />
     <ClInclude Include="grid.h" />
+    <ClInclude Include="hash.h" />
+    <ClInclude Include="helpers.h" />
     <ClInclude Include="word_list.h" />
     <ClInclude Include="heapV.h" />
   </ItemGroup>
@@ -36,6 +38,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="word_search.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
@@ -108,10 +113,14 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <BrowseInformation>true</BrowseInformation>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
     </Link>
+    <Bscmake>
+      <PreserveSbr>true</PreserveSbr>
+    </Bscmake>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
