--- a/FOA_Project_3/FOA_Project_3/FOA_Project_3.vcxproj
+++ b/FOA_Project_3/FOA_Project_3/FOA_Project_3.vcxproj
@@ -22,6 +22,7 @@
     <ClInclude Include="d_except.h" />
     <ClInclude Include="grid.h" />
     <ClInclude Include="hash.h" />
+    <ClInclude Include="heap.h" />
     <ClInclude Include="helpers.h" />
     <ClInclude Include="word_list.h" />
     <ClInclude Include="heapV.h" />
