--- a/FOA_Project_3/FOA_Project_3/FOA_Project_3.vcxproj.filters
+++ b/FOA_Project_3/FOA_Project_3/FOA_Project_3.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="helpers.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="heap.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="input15.txt">
